added mnn to config

--- a/conf/build_atlas.config
+++ b/conf/build_atlas.config
@@ -21,6 +21,13 @@ process {
         memory = 200.GB
     }
 
+    withName: MNN {
+        container = "biomedbigdata/sc-integration"
+        ext.kernel = "python3"
+        cpus = 22
+        memory = 200.GB
+    }
+
     /********************************
      * INTEGRATION
      ********************************/
@@ -64,6 +71,12 @@ process {
        withName: ".*integrate_datasets:HARMONY" {
          publishDir = [
             path: "${params.outdir}/integrate_datasets/22_harmony",
+            mode: params.publish_dir_mode
+        ]
+    }
+           withName: ".*integrate_datasets:MNN" {
+         publishDir = [
+            path: "${params.outdir}/integrate_datasets/23_mnn",
             mode: params.publish_dir_mode
         ]
     }
