Setup docker for MNN

--- a/conf/build_atlas.config
+++ b/conf/build_atlas.config
@@ -22,7 +22,7 @@ process {
     }
 
     withName: MNN {
-        container = "biomedbigdata/sc-integration"
+        container = "biomedbigdata/mnn"
         ext.kernel = "python3"
         cpus = 22
         memory = 200.GB
