Simplify config structure

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,6 @@
 // default parameters
 params {
     publish_dir_mode = "link"
-    with_genentech = false
     samplesheet = null
     samplesheet2 = null
 }
@@ -10,9 +9,230 @@ params {
 docker.enabled = true
 docker.userEmulation = true
 
-// include workflow-specific configurations
-if (params.workflow == "build_atlas") {
-    includeConfig 'conf/build_atlas.config'
-} else {
-    includeConfig 'conf/downstream_analyses.config'
+process {
+    // global for all scvi processes in this workflow
+    withName: "SCVI.*" {
+        // containerOptions = "--nv --no-home"
+        // clusterOptions = '-V -S /bin/bash -q all.q@apollo-15'
+        container = "biomedbigdata/sc-integration"
+        cpus = 4
+    }
+    withName: SCANVI {
+        container = "biomedbigdata/sc-integration"
+        // don't run on GPU due to pytorch internal runtime error
+        // runs in reasonable time (20min-ish) without a GPU on a
+        // full compute node
+        cpus = 44
+    }
+
+    withName: HARMONY {
+        container = "biomedbigdata/sc-integration"
+        ext.kernel = "python3"
+        cpus = 22
+        memory = 200.GB
+    }
+
+    withName: MNN {
+        container = "biomedbigdata/mnn"
+        ext.kernel = "python3"
+        cpus = 22
+        memory = 300.GB
+    }
+
+    /********************************
+     * INTEGRATION
+     ********************************/
+
+    withName: ".*integrate_datasets:SCQC" {
+        container = "biomedbigdata/sc-integration"
+        publishDir = [
+            path: { "${params.outdir}/integrate_datasets/02_qc_and_filtering/${meta.id}" },
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: ".*integrate_datasets:SCQC_MERGE_STATS" {
+        publishDir = [
+            path: "${params.outdir}/integrate_datasets/02_qc_and_filtering",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: MERGE_ALL {
+        container = "biomedbigdata/sc-integration"
+        ext.kernel = "python3"
+        cpus = 22
+        memory = 200.GB
+        publishDir = [
+            path: "${params.outdir}/integrate_datasets/21_merge_all",
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    withName: ".*integrate_datasets:SCVI" {
+        publishDir = [
+            path: "${params.outdir}/integrate_datasets/22_scvi",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: ".*integrate_datasets:SCANVI" {
+         publishDir = [
+            path: "${params.outdir}/integrate_datasets/23_scanvi",
+            mode: params.publish_dir_mode
+        ]
+    }
+       withName: ".*integrate_datasets:HARMONY" {
+         publishDir = [
+            path: "${params.outdir}/integrate_datasets/22_harmony",
+            mode: params.publish_dir_mode
+        ]
+    }
+           withName: ".*integrate_datasets:MNN" {
+         publishDir = [
+            path: "${params.outdir}/integrate_datasets/23_mnn",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: ".*:NEIGHBORS_LEIDEN_UMAP_DOUBLET:MERGE_UMAP_LEIDEN" {
+        publishDir = [
+            path: "${params.outdir}/integrate_datasets/24_scanvi_umap",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: SOLO {
+        container = "biomedbigdata/sc-integration"
+        cpus = 4
+        publishDir = [
+            path: "${params.outdir}/integrate_datasets/25_solo",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: MERGE_SOLO {
+        container = "biomedbigdata/sc-integration"
+        ext.kernel = "python3"
+        memory = 200.GB
+        publishDir = [
+            path: "${params.outdir}/integrate_datasets/26_merge_solo",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: ".*:NEIGHBORS_LEIDEN_UMAP_NODOUBLET:MERGE_UMAP_LEIDEN" {
+        publishDir = [
+            path: "${params.outdir}/integrate_datasets/27_leiden_umap_nodoublet",
+            mode: params.publish_dir_mode
+        ]
+    }
+
+
+    /**************************************************
+     * ANNOTATION
+     **************************************************/
+    withName: ANNOTATE_CELL_TYPES_COARSE {
+        container = "biomedbigdata/sc-integration"
+        ext.kernel = "python3"
+        memory = 200.GB
+        publishDir = [
+            path: "${params.outdir}/annotate_datasets/31_cell_types_coarse",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: ".*annotate_dataset:SPLIT_ANNDATA" {
+        container = "biomedbigdata/sc-integration"
+    }
+    withName: ".*:NEIGHBORS_LEIDEN_UMAP_CELL_TYPES:MERGE_UMAP_LEIDEN" {
+        publishDir = [
+            path: "${params.outdir}/annotate_datasets/31_cell_types_coarse/by_cell_type",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: ANNOTATE_CELL_TYPES_FINE {
+        // conda = "/home/sturm/.conda/envs/pircher-sc-integrate2"
+        container = "biomedbigdata/sc-integration"
+        ext.kernel = "python3"
+        memory = 200.GB
+        publishDir = [
+            path: "${params.outdir}/annotate_datasets/32_cell_types_fine",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: ANNOTATE_CELL_TYPES_EPI {
+        // conda = "/home/sturm/.conda/envs/pircher-sc-integrate2"
+        container = "biomedbigdata/sc-integration"
+        ext.kernel = "python3"
+        publishDir = [
+            path: "${params.outdir}/annotate_datasets/33_cell_types_epi",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: ".*annotate_dataset:EXPORT_ATLAS" {
+        container = "biomedbigdata/sc-integration"
+        // conda = "/home/sturm/.conda/envs/pircher-sc-integrate2"
+        ext.kernel = "python3"
+        publishDir = [
+            path: "${params.outdir}/annotate_datasets/35_final_atlas",
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    // These two processes run with a newer version of scvi-tools that is recommended for scarches.
+    // The other processes have not been updated since this would require re-doing the cell-type annotation
+    withName: ".*annotate_dataset:SCVI" {
+        container = "biomedbigdata/sc-integration"
+        // conda = "/home/sturm/.conda/envs/pircher-sc-integrate2"
+        publishDir = [
+            path: "${params.outdir}/annotate_datasets/35_final_atlas",
+            mode: params.publish_dir_mode
+        ]
+        ext.args = "--arches_params 1"
+    }
+    withName: ".*annotate_dataset:SCANVI" {
+        container = "biomedbigdata/sc-integration"
+        // conda = "/home/sturm/.conda/envs/pircher-sc-integrate2"
+        publishDir = [
+            path: "${params.outdir}/annotate_datasets/35_final_atlas",
+            mode: params.publish_dir_mode
+        ]
+    }
+
+    /***************************************************
+     * Add additional datasets
+     ***************************************************/
+
+    withName: ".*add_additional_datasets:SCQC" {
+        container = "biomedbigdata/sc-integration"
+        publishDir = [
+            path: { "${params.outdir}/add_additional_datasets/01_qc_and_filtering/${meta.id}" },
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: ".*add_additional_datasets:SCQC_MERGE_STATS" {
+        publishDir = [
+            path: "${params.outdir}/add_additional_datasets/01_qc_and_filtering",
+            mode: params.publish_dir_mode
+        ]
+    }
+    withName: ".*add_additional_datasets:INTEGRATE_INTO_ATLAS" {
+        cpus = 2
+        // containerOptions = "--nv --no-home"
+        // clusterOptions = '-V -S /bin/bash -q all.q@apollo-15'
+        container = "biomedbigdata/sc-integration"
+        // conda = "/home/sturm/.conda/envs/pircher-sc-integrate2"
+        publishDir = [
+            path: { "${params.outdir}/add_additional_datasets/02_integrate_into_atlas/${parameters.dataset_id}" },
+            mode: params.publish_dir_mode
+        ]
+        ext.kernel = "python3"
+        cache = 'lenient'
+    }
+    withName: ".*add_additional_datasets:UPDATE_ANNOTATION" {
+        cpus = 16
+        // conda = "/home/sturm/.conda/envs/pircher-sc-integrate2"
+        container = "biomedbigdata/sc-integration"
+        publishDir = [
+            path: "${params.outdir}/add_additional_datasets/03_update_annotation",
+            mode: params.publish_dir_mode
+        ]
+        ext.kernel = "python3"
+        cache = 'lenient'
+    }
+
 }
+
