--- a/nextflow.config
+++ b/nextflow.config
@@ -5,20 +5,30 @@ params {
     samplesheet2 = null
 }
 
-//enable docker
-docker.enabled = true
-docker.userEmulation = true
+profiles {
+     standard {
+        process.executor = 'local'
+        docker.enabled = true
+        docker.userEmulation = true
+     }
+     cluster {
+        process.executor = 'slurm'
+        singularity.enabled = true
+        // docker.userEmulation = true
+        process.clusterOptions = '--nodelist=bert.exbio.wzw.tum.de'
+     }
+}
 
 process {
     // global for all scvi processes in this workflow
     withName: "SCVI.*" {
         // containerOptions = "--nv --no-home"
         // clusterOptions = '-V -S /bin/bash -q all.q@apollo-15'
-        container = "biomedbigdata/sc-integration"
+        container = "bigdatainbiomedicine/sc-integration"
         cpus = 4
     }
     withName: SCANVI {
-        container = "biomedbigdata/sc-integration"
+        container = "bigdatainbiomedicine/sc-integration"
         // don't run on GPU due to pytorch internal runtime error
         // runs in reasonable time (20min-ish) without a GPU on a
         // full compute node
@@ -26,14 +36,14 @@ process {
     }
 
     withName: HARMONY {
-        container = "biomedbigdata/sc-integration"
+        container = "bigdatainbiomedicine/sc-integration"
         ext.kernel = "python3"
         cpus = 22
         memory = 200.GB
     }
 
     withName: MNN {
-        container = "biomedbigdata/mnn"
+        container = "bigdatainbiomedicine/mnn"
         ext.kernel = "python3"
         cpus = 22
         memory = 300.GB
@@ -44,7 +54,7 @@ process {
      ********************************/
 
     withName: ".*integrate_datasets:SCQC" {
-        container = "biomedbigdata/sc-integration"
+        container = "bigdatainbiomedicine/sc-integration"
         publishDir = [
             path: { "${params.outdir}/integrate_datasets/02_qc_and_filtering/${meta.id}" },
             mode: params.publish_dir_mode
@@ -57,7 +67,7 @@ process {
         ]
     }
     withName: MERGE_ALL {
-        container = "biomedbigdata/sc-integration"
+        container = "bigdatainbiomedicine/sc-integration"
         ext.kernel = "python3"
         cpus = 22
         memory = 200.GB
@@ -98,7 +108,7 @@ process {
         ]
     }
     withName: SOLO {
-        container = "biomedbigdata/sc-integration"
+        container = "bigdatainbiomedicine/sc-integration"
         cpus = 4
         publishDir = [
             path: "${params.outdir}/integrate_datasets/25_solo",
@@ -106,7 +116,7 @@ process {
         ]
     }
     withName: MERGE_SOLO {
-        container = "biomedbigdata/sc-integration"
+        container = "bigdatainbiomedicine/sc-integration"
         ext.kernel = "python3"
         memory = 200.GB
         publishDir = [
@@ -126,7 +136,7 @@ process {
      * ANNOTATION
      **************************************************/
     withName: ANNOTATE_CELL_TYPES_COARSE {
-        container = "biomedbigdata/sc-integration"
+        container = "bigdatainbiomedicine/sc-integration"
         ext.kernel = "python3"
         memory = 200.GB
         publishDir = [
@@ -135,7 +145,7 @@ process {
         ]
     }
     withName: ".*annotate_dataset:SPLIT_ANNDATA" {
-        container = "biomedbigdata/sc-integration"
+        container = "bigdatainbiomedicine/sc-integration"
     }
     withName: ".*:NEIGHBORS_LEIDEN_UMAP_CELL_TYPES:MERGE_UMAP_LEIDEN" {
         publishDir = [
@@ -145,7 +155,7 @@ process {
     }
     withName: ANNOTATE_CELL_TYPES_FINE {
         // conda = "/home/sturm/.conda/envs/pircher-sc-integrate2"
-        container = "biomedbigdata/sc-integration"
+        container = "bigdatainbiomedicine/sc-integration"
         ext.kernel = "python3"
         memory = 200.GB
         publishDir = [
@@ -155,7 +165,7 @@ process {
     }
     withName: ANNOTATE_CELL_TYPES_EPI {
         // conda = "/home/sturm/.conda/envs/pircher-sc-integrate2"
-        container = "biomedbigdata/sc-integration"
+        container = "bigdatainbiomedicine/sc-integration"
         ext.kernel = "python3"
         publishDir = [
             path: "${params.outdir}/annotate_datasets/33_cell_types_epi",
@@ -163,7 +173,7 @@ process {
         ]
     }
     withName: ".*annotate_dataset:EXPORT_ATLAS" {
-        container = "biomedbigdata/sc-integration"
+        container = "bigdatainbiomedicine/sc-integration"
         // conda = "/home/sturm/.conda/envs/pircher-sc-integrate2"
         ext.kernel = "python3"
         publishDir = [
@@ -175,7 +185,7 @@ process {
     // These two processes run with a newer version of scvi-tools that is recommended for scarches.
     // The other processes have not been updated since this would require re-doing the cell-type annotation
     withName: ".*annotate_dataset:SCVI" {
-        container = "biomedbigdata/sc-integration"
+        container = "bigdatainbiomedicine/sc-integration"
         // conda = "/home/sturm/.conda/envs/pircher-sc-integrate2"
         publishDir = [
             path: "${params.outdir}/annotate_datasets/35_final_atlas",
@@ -184,7 +194,7 @@ process {
         ext.args = "--arches_params 1"
     }
     withName: ".*annotate_dataset:SCANVI" {
-        container = "biomedbigdata/sc-integration"
+        container = "bigdatainbiomedicine/sc-integration"
         // conda = "/home/sturm/.conda/envs/pircher-sc-integrate2"
         publishDir = [
             path: "${params.outdir}/annotate_datasets/35_final_atlas",
@@ -197,7 +207,7 @@ process {
      ***************************************************/
 
     withName: ".*add_additional_datasets:SCQC" {
-        container = "biomedbigdata/sc-integration"
+        container = "bigdatainbiomedicine/sc-integration"
         publishDir = [
             path: { "${params.outdir}/add_additional_datasets/01_qc_and_filtering/${meta.id}" },
             mode: params.publish_dir_mode
@@ -213,7 +223,7 @@ process {
         cpus = 2
         // containerOptions = "--nv --no-home"
         // clusterOptions = '-V -S /bin/bash -q all.q@apollo-15'
-        container = "biomedbigdata/sc-integration"
+        container = "bigdatainbiomedicine/sc-integration"
         // conda = "/home/sturm/.conda/envs/pircher-sc-integrate2"
         publishDir = [
             path: { "${params.outdir}/add_additional_datasets/02_integrate_into_atlas/${parameters.dataset_id}" },
@@ -225,7 +235,7 @@ process {
     withName: ".*add_additional_datasets:UPDATE_ANNOTATION" {
         cpus = 16
         // conda = "/home/sturm/.conda/envs/pircher-sc-integrate2"
-        container = "biomedbigdata/sc-integration"
+        container = "bigdatainbiomedicine/sc-integration"
         publishDir = [
             path: "${params.outdir}/add_additional_datasets/03_update_annotation",
             mode: params.publish_dir_mode
