Fix singularity mounting bug

--- a/nextflow.config
+++ b/nextflow.config
@@ -14,8 +14,8 @@ profiles {
      cluster {
         process.executor = 'slurm'
         singularity.enabled = true
+        singularity.autoMounts = true
         // docker.userEmulation = true
-        process.clusterOptions = '--nodelist=bert.exbio.wzw.tum.de'
      }
 }
 
