Prepare for Integration combination

--- a/nextflow.config
+++ b/nextflow.config
@@ -3,6 +3,7 @@ params {
     publish_dir_mode = "link"
     samplesheet = null
     samplesheet2 = null
+    mnn = false
 }
 
 profiles {
@@ -15,7 +16,6 @@ profiles {
         process.executor = 'slurm'
         singularity.enabled = true
         singularity.autoMounts = true
-        // docker.userEmulation = true
      }
 }
 
@@ -46,7 +46,7 @@ process {
         container = "bigdatainbiomedicine/mnn"
         ext.kernel = "python3"
         cpus = 22
-        memory = 300.GB
+        memory = 400.GB
     }
 
     /********************************
