Fix some problems with integration merging

--- a/nextflow.config
+++ b/nextflow.config
@@ -49,6 +49,13 @@ process {
         memory = 400.GB
     }
 
+    withName: MERGE_INTEGRATIONS {
+        container = "bigdatainbiomedicine/mnn"
+        ext.kernel = "python3"
+        cpus = 5
+        memory = 100.GB
+    }
+
     /********************************
      * INTEGRATION
      ********************************/
