Tweak resource requirements

--- a/nextflow.config
+++ b/nextflow.config
@@ -14,6 +14,7 @@ profiles {
      }
      cluster {
         process.executor = 'slurm'
+        process.queue = 'exbio-cpu'
         singularity.enabled = true
         singularity.autoMounts = true
      }
@@ -26,6 +27,7 @@ process {
         // clusterOptions = '-V -S /bin/bash -q all.q@apollo-15'
         container = "bigdatainbiomedicine/sc-integration"
         cpus = 4
+        memory = 200.GB
     }
     withName: SCANVI {
         container = "bigdatainbiomedicine/sc-integration"
@@ -66,6 +68,7 @@ process {
             path: { "${params.outdir}/integrate_datasets/02_qc_and_filtering/${meta.id}" },
             mode: params.publish_dir_mode
         ]
+        memory = 150.GB
     }
     withName: ".*integrate_datasets:SCQC_MERGE_STATS" {
         publishDir = [
