Implement attemt-dependent memory allocation

--- a/nextflow.config
+++ b/nextflow.config
@@ -23,11 +23,11 @@ profiles {
 process {
     // global for all scvi processes in this workflow
     withName: "SCVI.*" {
-        // containerOptions = "--nv --no-home"
-        // clusterOptions = '-V -S /bin/bash -q all.q@apollo-15'
         container = "bigdatainbiomedicine/sc-integration"
         cpus = 4
-        memory = 200.GB
+        memory = {100.GB * task.attempt}
+        maxRetries = 4
+        errorStrategy = 'retry'
     }
     withName: SCANVI {
         container = "bigdatainbiomedicine/sc-integration"
@@ -35,27 +35,35 @@ process {
         // runs in reasonable time (20min-ish) without a GPU on a
         // full compute node
         cpus = 44
+        memory = {100.GB * task.attempt}
+        maxRetries = 4
+        errorStrategy = 'retry'
     }
 
     withName: HARMONY {
         container = "bigdatainbiomedicine/sc-integration"
         ext.kernel = "python3"
         cpus = 22
-        memory = 200.GB
+        memory = {100.GB * task.attempt}
+        maxRetries = 4
+        errorStrategy = 'retry'
     }
 
     withName: MNN {
         container = "bigdatainbiomedicine/mnn"
         ext.kernel = "python3"
         cpus = 22
-        memory = 400.GB
+        memory = {200.GB * task.attempt}
+        maxRetries = 4
+        errorStrategy = 'retry'
     }
 
     withName: MERGE_INTEGRATIONS {
-        container = "bigdatainbiomedicine/mnn"
-        ext.kernel = "python3"
+        container = "bigdatainbiomedicine/sc-integration"
         cpus = 5
-        memory = 100.GB
+        memory = {50.GB * task.attempt}
+        maxRetries = 4
+        errorStrategy = 'retry'
     }
 
     /********************************
@@ -68,7 +76,9 @@ process {
             path: { "${params.outdir}/integrate_datasets/02_qc_and_filtering/${meta.id}" },
             mode: params.publish_dir_mode
         ]
-        memory = 150.GB
+        memory = {50.GB * task.attempt}
+        maxRetries = 4
+        errorStrategy = 'retry'
     }
     withName: ".*integrate_datasets:SCQC_MERGE_STATS" {
         publishDir = [
@@ -80,7 +90,9 @@ process {
         container = "bigdatainbiomedicine/sc-integration"
         ext.kernel = "python3"
         cpus = 22
-        memory = 200.GB
+        memory = {100.GB * task.attempt}
+        maxRetries = 4
+        errorStrategy = 'retry'
         publishDir = [
             path: "${params.outdir}/integrate_datasets/21_merge_all",
             mode: params.publish_dir_mode
@@ -120,6 +132,9 @@ process {
     withName: SOLO {
         container = "bigdatainbiomedicine/sc-integration"
         cpus = 4
+        memory = {100.GB * task.attempt}
+        maxRetries = 4
+        errorStrategy = 'retry'
         publishDir = [
             path: "${params.outdir}/integrate_datasets/25_solo",
             mode: params.publish_dir_mode
@@ -128,7 +143,9 @@ process {
     withName: MERGE_SOLO {
         container = "bigdatainbiomedicine/sc-integration"
         ext.kernel = "python3"
-        memory = 200.GB
+        memory = {100.GB * task.attempt}
+        maxRetries = 4
+        errorStrategy = 'retry'
         publishDir = [
             path: "${params.outdir}/integrate_datasets/26_merge_solo",
             mode: params.publish_dir_mode
@@ -148,7 +165,9 @@ process {
     withName: ANNOTATE_CELL_TYPES_COARSE {
         container = "bigdatainbiomedicine/sc-integration"
         ext.kernel = "python3"
-        memory = 200.GB
+        memory = {100.GB * task.attempt}
+        maxRetries = 4
+        errorStrategy = 'retry'
         publishDir = [
             path: "${params.outdir}/annotate_datasets/31_cell_types_coarse",
             mode: params.publish_dir_mode
@@ -156,6 +175,9 @@ process {
     }
     withName: ".*annotate_dataset:SPLIT_ANNDATA" {
         container = "bigdatainbiomedicine/sc-integration"
+        memory = {50.GB * task.attempt}
+        maxRetries = 4
+        errorStrategy = 'retry'
     }
     withName: ".*:NEIGHBORS_LEIDEN_UMAP_CELL_TYPES:MERGE_UMAP_LEIDEN" {
         publishDir = [
@@ -163,28 +185,8 @@ process {
             mode: params.publish_dir_mode
         ]
     }
-    withName: ANNOTATE_CELL_TYPES_FINE {
-        // conda = "/home/sturm/.conda/envs/pircher-sc-integrate2"
-        container = "bigdatainbiomedicine/sc-integration"
-        ext.kernel = "python3"
-        memory = 200.GB
-        publishDir = [
-            path: "${params.outdir}/annotate_datasets/32_cell_types_fine",
-            mode: params.publish_dir_mode
-        ]
-    }
-    withName: ANNOTATE_CELL_TYPES_EPI {
-        // conda = "/home/sturm/.conda/envs/pircher-sc-integrate2"
-        container = "bigdatainbiomedicine/sc-integration"
-        ext.kernel = "python3"
-        publishDir = [
-            path: "${params.outdir}/annotate_datasets/33_cell_types_epi",
-            mode: params.publish_dir_mode
-        ]
-    }
     withName: ".*annotate_dataset:EXPORT_ATLAS" {
         container = "bigdatainbiomedicine/sc-integration"
-        // conda = "/home/sturm/.conda/envs/pircher-sc-integrate2"
         ext.kernel = "python3"
         publishDir = [
             path: "${params.outdir}/annotate_datasets/35_final_atlas",
@@ -192,11 +194,7 @@ process {
         ]
     }
 
-    // These two processes run with a newer version of scvi-tools that is recommended for scarches.
-    // The other processes have not been updated since this would require re-doing the cell-type annotation
     withName: ".*annotate_dataset:SCVI" {
-        container = "bigdatainbiomedicine/sc-integration"
-        // conda = "/home/sturm/.conda/envs/pircher-sc-integrate2"
         publishDir = [
             path: "${params.outdir}/annotate_datasets/35_final_atlas",
             mode: params.publish_dir_mode
@@ -204,8 +202,6 @@ process {
         ext.args = "--arches_params 1"
     }
     withName: ".*annotate_dataset:SCANVI" {
-        container = "bigdatainbiomedicine/sc-integration"
-        // conda = "/home/sturm/.conda/envs/pircher-sc-integrate2"
         publishDir = [
             path: "${params.outdir}/annotate_datasets/35_final_atlas",
             mode: params.publish_dir_mode
@@ -231,10 +227,7 @@ process {
     }
     withName: ".*add_additional_datasets:INTEGRATE_INTO_ATLAS" {
         cpus = 2
-        // containerOptions = "--nv --no-home"
-        // clusterOptions = '-V -S /bin/bash -q all.q@apollo-15'
         container = "bigdatainbiomedicine/sc-integration"
-        // conda = "/home/sturm/.conda/envs/pircher-sc-integrate2"
         publishDir = [
             path: { "${params.outdir}/add_additional_datasets/02_integrate_into_atlas/${parameters.dataset_id}" },
             mode: params.publish_dir_mode
