Add dedicated R docker image

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,6 +3,10 @@ services:
     build: 
       context: ..
     image: bigdatainbiomedicine/sc-python
+  r:
+    build: 
+      context: r
+    image: bigdatainbiomedicine/sc-r
   mnn:
     build: 
       context: mnn
