--- a/nextflow.config
+++ b/nextflow.config
@@ -66,6 +66,14 @@ process {
         errorStrategy = 'retry'
     }
 
+    withName: DECONTX {
+        container = "bigdatainbiomedicine/sc-r"
+        cpus = 4
+        memory = {50.GB * task.attempt}
+        maxRetries = 1
+        errorStrategy = 'retry'
+    }
+
     /********************************
      * INTEGRATION
      ********************************/
