Finish dedup and ambient processing

--- a/nextflow.config
+++ b/nextflow.config
@@ -140,7 +140,7 @@ process {
     withName: SOLO {
         container = "bigdatainbiomedicine/sc-python"
         cpus = 4
-        memory = {100.GB * task.attempt}
+        memory = { 100.GB * task.attempt }
         maxRetries = 4
         errorStrategy = 'retry'
         publishDir = [
@@ -164,6 +164,13 @@ process {
             path: "${params.outdir}/integrate_datasets/27_leiden_umap_nodoublet",
             mode: params.publish_dir_mode
         ]
+    }
+    withName: SPLIT_BATCHES {
+        container = "bigdatainbiomedicine/sc-python"
+        ext.kernel = "python3"
+        memory = {50.GB * task.attempt}
+        maxRetries = 4
+        errorStrategy = 'retry'
     }
 
 
