Improve Celltypist integration

--- a/nextflow.config
+++ b/nextflow.config
@@ -177,14 +177,14 @@ process {
     /**************************************************
      * ANNOTATION
      **************************************************/
-    withName: ANNOTATE_CELL_TYPES_COARSE {
+    withName: CELLTYPIST {
         container = "bigdatainbiomedicine/sc-python"
         ext.kernel = "python3"
         memory = {100.GB * task.attempt}
         maxRetries = 4
         errorStrategy = 'retry'
         publishDir = [
-            path: "${params.outdir}/annotate_datasets/31_cell_types_coarse",
+            path: "${params.outdir}/annotate_datasets/31_celltypist",
             mode: params.publish_dir_mode
         ]
     }
