--- a/nextflow.config
+++ b/nextflow.config
@@ -4,6 +4,10 @@ params {
     samplesheet = null
     samplesheet2 = null
     mnn = false
+    clustering_resolutions = [0.25, 0.5, 0.75, 1, 1.5, 2]
+    celltypist_model = "Cells_Intestinal_Tract.pkl"
+    celltypist_majority_voting = true
+    organism = "human"
 }
 
 profiles {
