Implement option for using the scib fast metrics

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,6 +8,7 @@ params {
     celltypist_model = "Cells_Intestinal_Tract.pkl"
     celltypist_majority_voting = true
     organism = "human"
+    scib_fast = true
 }
 
 profiles {
