Implement adata metric calculation

--- a/nextflow.config
+++ b/nextflow.config
@@ -178,6 +178,13 @@ process {
         errorStrategy = 'retry'
     }
 
+    withName: COMBINE_ADATA_METRICS {
+        publishDir = [
+            path: "${params.outdir}/adata_metrics",
+            mode: params.publish_dir_mode
+        ]
+    }
+
 
     /**************************************************
      * ANNOTATION
