--- a/nextflow.config
+++ b/nextflow.config
@@ -12,17 +12,101 @@ params {
 }
 
 profiles {
-     standard {
+    standard {
         process.executor = 'local'
         docker.enabled = true
         docker.userEmulation = true
-     }
-     cluster {
+    }
+    cluster {
         process.executor = 'slurm'
         process.queue = 'exbio-cpu'
-        singularity.enabled = true
+        apptainer.enabled = true
+        apptainer.autoMounts = true
+    }
+    conda {
+        conda.enabled          = true
+        docker.enabled         = false
+        singularity.enabled    = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+        apptainer.enabled      = false
+    }
+    mamba {
+        conda.enabled          = true
+        conda.useMamba         = true
+        docker.enabled         = false
+        singularity.enabled    = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+        apptainer.enabled      = false
+    }
+    docker {
+        docker.enabled         = true
+        docker.userEmulation   = true
+        conda.enabled          = false
+        singularity.enabled    = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+        apptainer.enabled      = false
+    }
+    arm {
+        docker.runOptions = '-u $(id -u):$(id -g) --platform=linux/amd64'
+    }
+    singularity {
+        singularity.enabled    = true
         singularity.autoMounts = true
-     }
+        conda.enabled          = false
+        docker.enabled         = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+        apptainer.enabled      = false
+    }
+    podman {
+        podman.enabled         = true
+        conda.enabled          = false
+        docker.enabled         = false
+        singularity.enabled    = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+        apptainer.enabled      = false
+    }
+    shifter {
+        shifter.enabled        = true
+        conda.enabled          = false
+        docker.enabled         = false
+        singularity.enabled    = false
+        podman.enabled         = false
+        charliecloud.enabled   = false
+        apptainer.enabled      = false
+    }
+    charliecloud {
+        charliecloud.enabled   = true
+        conda.enabled          = false
+        docker.enabled         = false
+        singularity.enabled    = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        apptainer.enabled      = false
+    }
+    apptainer {
+        apptainer.enabled      = true
+        apptainer.autoMounts   = true
+        conda.enabled          = false
+        docker.enabled         = false
+        singularity.enabled    = false
+        podman.enabled         = false
+        shifter.enabled        = false
+        charliecloud.enabled   = false
+    }
+    gitpod {
+        executor.name          = 'local'
+        executor.cpus          = 4
+        executor.memory        = 8.GB
+    }
 }
 
 process {
