--- a/nextflow.config
+++ b/nextflow.config
@@ -332,5 +332,12 @@ process {
         cache = 'lenient'
     }
 
+    /***************************************************
+     * Finalization
+     ***************************************************/
+
+     withName: NORMALIZATION {
+        memory = {50.GB * task.attempt}
+     }
 }
 
