--- a/nextflow.config
+++ b/nextflow.config
@@ -9,6 +9,7 @@ params {
     celltypist_majority_voting = true
     organism = "human"
     scib_fast = true
+    integration_methods = ["scvi", "scanvi", "harmony", "mnn"]
 }
 
 profiles {
