Fix problems with integration environment

--- a/docker/python/Dockerfile
+++ b/docker/python/Dockerfile
@@ -1,24 +1,18 @@
-FROM ubuntu:20.04
+FROM mambaorg/micromamba:1.5-jammy
 
-# manually enable gcc8 installation 
-RUN echo 'deb [arch=amd64] http://archive.ubuntu.com/ubuntu focal main universe' >> /etc/apt/sources.list
+RUN micromamba install -y -n base -c conda-forge -c bioconda \
+        python \
+        pandas anndata scanpy \
+        louvain leidenalg \
+        mnnpy harmony-pytorch scvi-tools scib \
+        seaborn scikit-misc celltypist scanorama bbknn && \
+    micromamba run -n base pip install --no-cache-dir \
+        desc trvae trvaep && \
+    micromamba clean --all --yes
 
-# make sure gcc, python3 (dev) and pip are up to date
-RUN apt-get update && apt-get install -y \
-    gcc-8 g++-8 python3 python3-pip \ 
-    python3-dev 
-
-COPY requirements.txt /tmp/
-
-WORKDIR /tmp
-
-# Install dependencies
-RUN pip install -r requirements.txt
+ENV PATH /opt/conda/bin:$PATH
 
 WORKDIR /app
-
-# Remove the temporary files
-RUN rm -rf /tmp
 
 ENV NUMBA_CACHE_DIR=/tmp/numba_cache
 RUN mkdir -p $NUMBA_CACHE_DIR && chmod -R 777 $NUMBA_CACHE_DIR
