--- a/nextflow.config
+++ b/nextflow.config
@@ -9,7 +9,7 @@ params {
     celltypist_majority_voting = true
     organism = "human"
     scib_fast = true
-    integration_methods = ["scvi", "scanvi", "harmony", "mnn"]
+    integration_methods = ["scvi", "scanvi", "harmony", "mnn", "bbknn", "combat", "desc", "scanorama", "trvaep"]
 }
 
 profiles {
