Fix process label problems

--- a/nextflow.config
+++ b/nextflow.config
@@ -10,6 +10,10 @@ params {
     organism = "human"
     scib_fast = true
     integration_methods = ["scvi", "scanvi", "harmony", "mnn", "bbknn", "combat", "desc", "scanorama", "trvaep"]
+
+    max_cpus = 128
+    max_memory = 512.GB
+    max_time = 48.h
 }
 
 profiles {
@@ -83,7 +87,37 @@ profiles {
         executor.cpus          = 4
         executor.memory        = 8.GB
     }
-
-    includeConfig "conf/base.config"
 }
 
+includeConfig "conf/base.config"
+
+def check_max(obj, type) {
+    if (type == 'memory') {
+        try {
+            if (obj.compareTo(params.max_memory as nextflow.util.MemoryUnit) == 1)
+                return params.max_memory as nextflow.util.MemoryUnit
+            else
+                return obj
+        } catch (all) {
+            println "   ### ERROR ###   Max memory '${params.max_memory}' is not valid! Using default value: $obj"
+            return obj
+        }
+    } else if (type == 'time') {
+        try {
+            if (obj.compareTo(params.max_time as nextflow.util.Duration) == 1)
+                return params.max_time as nextflow.util.Duration
+            else
+                return obj
+        } catch (all) {
+            println "   ### ERROR ###   Max time '${params.max_time}' is not valid! Using default value: $obj"
+            return obj
+        }
+    } else if (type == 'cpus') {
+        try {
+            return Math.min( obj, params.max_cpus as int )
+        } catch (all) {
+            println "   ### ERROR ###   Max cpus '${params.max_cpus}' is not valid! Using default value: $obj"
+            return obj
+        }
+    }
+}
