--- a/conf/base.config
+++ b/conf/base.config
@@ -40,14 +40,15 @@ process {
     withLabel:process_high_memory {
         memory = { check_max( 200.GB * task.attempt, 'memory' ) }
     }
+    withLabel:scale_resources {
+        errorStrategy = { task.exitStatus in [143,137,104,134,139] ? 'retry' : 'finish' }
+        maxRetries    = 5
+    }
     withLabel:error_ignore {
         errorStrategy = 'ignore'
     }
     withLabel:error_retry {
         errorStrategy = 'retry'
         maxRetries    = 4
-    }
-    withName:CUSTOM_DUMPSOFTWAREVERSIONS {
-        cache = false
     }
 }
