--- a/conf/base.config
+++ b/conf/base.config
@@ -41,7 +41,7 @@ process {
         memory = { check_max( 200.GB * task.attempt, 'memory' ) }
     }
     withLabel:scale_resources {
-        errorStrategy = '{ task.exitStatus in [143,137,104,134,139] ? 'retry' : 'finish' }'
+        errorStrategy = { task.exitStatus in [143,137,104,134,139] ? 'retry' : 'finish' }
         maxRetries    = 5
     }
     withLabel:error_ignore {
