--- a/nextflow.config
+++ b/nextflow.config
@@ -8,10 +8,12 @@ params {
     celltypist_model = "Cells_Intestinal_Tract.pkl"
     celltypist_majority_voting = true
     organism = "human"
-    scib_fast = true
     integration_methods = ["scvi", "scanvi", "harmony", "bbknn", "combat", "scanorama"]
 
-    max_cpus = 128
+    benchmark = false
+    benchmark_hvgs = 100
+
+    max_cpus = 60
     max_memory = 512.GB
     max_time = 48.h
 }
