--- a/runs/minimal/nextflow.config
+++ b/runs/minimal/nextflow.config
@@ -1,3 +1,4 @@
 params {
-    integration_methods = ["scvi", "harmony", "bbknn", "combat", "scanorama"]
+    integration_methods = ["scvi", "scanvi", "harmony", "bbknn", "combat", "scanorama"]
+    benchmark = true
 }
